# AssistantProject-v.0.1

./: .gitignore  Dockerfile  README.md  deploy.yaml  pyproject.toml
.github/workflows/: actions.yaml  first-github.yaml
src/: main.py
